# Fundamental_Algorithms_Labs

./: .gitignore  CMakeLists.txt
package_1/: CMakeLists.txt
package_1/task_1/: CMakeLists.txt
package_1/task_1/include/: handlers.h
package_1/task_1/src/: handlers.c  main.c
package_1/task_1/tests/: CMakeLists.txt  main_test.c
package_1/task_2/: CMakeLists.txt
package_1/task_2/include/: primes.h
package_1/task_2/src/: main.c  primes.c
package_1/task_2/tests/: CMakeLists.txt  main_tests.c
package_1/task_3/: CMakeLists.txt
package_1/task_3/include/: handler_m.h  handler_q.h  handler_status.h  handler_t.h
package_1/task_3/src/: handler_m.c  handler_q.c  handler_t.c  main.c
package_1/task_3/tests/: CMakeLists.txt  main_tests.c
package_1/task_4/: CMakeLists.txt
package_1/task_4/include/: equation.h  limit.h  series_sum.h  utils.h
package_1/task_4/src/: equation.c  limit.c  main.c  series_sum.c  utils.c
package_1/task_5/: CMakeLists.txt
package_1/task_6/: CMakeLists.txt
package_1/task_7/: CMakeLists.txt
package_1/task_8/: CMakeLists.txt
package_2/: CMakeLists.txt
package_2/task_1/: CMakeLists.txt
package_2/task_2/: CMakeLists.txt  main.c
package_2/task_3/: CMakeLists.txt  main.c
package_2/task_4/: CMakeLists.txt  main.c
package_2/task_5/: CMakeLists.txt  main.c
package_2/task_6/: CMakeLists.txt  main.c
package_3/: CMakeLists.txt
package_3/task_1/: CMakeLists.txt  main.c
package_3/task_2/: CMakeLists.txt  example_int.c
package_3/task_6/: CMakeLists.txt  main.c
package_3/task_7/: CMakeLists.txt  main.c
(+59 files in other folders)
